[tool.poetry]
name = "cmd_click"
version = "0.1.0"
description = "Demonstration of nested Click commands, combined with the builtin cmd.Cmd loop!"
authors = ["Wanderrful <wanderrful@gmail.com>"]

[tool.poetry.scripts]
cmdclick = "cmd_click.pets:run"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
